# dns-over-wikipedia

./: .gitignore  Cargo.toml  README.md
browser-extension/: common.js  manifest.json  testcases.txt
firefox/: common.js  manifest.json
hosts-file/: README.md  shell.nix
hosts-file/src/: main.rs  wikipedia.rs
src/: main.rs  wikipedia.rs
