[package]
name = "dns-over-wikipedia"
version = "0.1.0"
authors = ["Aaron Janse <aaron@ajanse.me>", "Vihan Bhargava <vihan+github@vihan.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "*"
reqwest = { version = "0.10", features = ["blocking"] }
json = "0.12.4"
